Fix scroll on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -211,8 +211,10 @@ main .blogpost-card-container .blogpost-img-container .post-image{
 }
 
 .profile-main-container {
-    padding: 4rem 4rem;
+    max-width: 100%;
     background-color: #cdd2da;
+    display: flex;
+    justify-content: center;
 }
 
 .profile-main-container .profile-container {
@@ -225,15 +227,18 @@ main .blogpost-card-container .blogpost-img-container .post-image{
 .profile-container img {
     width: 32rem;
     margin-right: 2rem;
+    padding: 2rem;
 }
 
 .profile-container div h2 {
     font-family: 'Major Mono Display', monospace;
     margin-bottom: 2rem;
+    margin-left: 1rem;
 }
 
 .profile-container div p {
     font-size: 1.5rem;
+    margin: 1rem;
 }
 
 .profile-main-projects {
